<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/some_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/some_text"
        android:textColor="@color/purple_500"
        android:textSize="20sp"
        android:textStyle="italic|bold" />

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:hint="@string/input_text"
        android:textColor="@color/purple_500"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/tap_me" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:checked="true"
        android:paddingBottom="20dp"
        android:textAllCaps="true"
        android:textColor="@color/purple_500"
        android:textOff="@string/switch_off"
        android:textOn="@string/switch_on"
        app:showText="true">

    </androidx.appcompat.widget.SwitchCompat>

    <CheckBox
        android:id="@+id/checkbox_example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:checked="false"
        android:text="@string/check_box"
        android:textSize="15sp" />

    <ToggleButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:checked="true"
        android:shadowColor="@color/purple_500"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:textOff="@string/togglebtn_off"
        android:textOn="@string/togglebtn_on" />

</LinearLayout>